# emojistats-bsky

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  backfill_rewrite_v2_plan.md  biome.json  bun.lockb  bunfig.toml  check-repos.sql  docker-compose.yml  futur_backfill_findings.md  infra-setup.md  nexus_migration_plan.md  nexus_rewrite.md  package.json  reset-local.sh  schema.sql
.claude/plans/: 0000-implementation-plan-clickhouse-tap-backfill-redis-rebuild.md  0001-plan-clickhouse-lean-crawler-backfill.md
.github/workflows/: rust.yml
.husky/: pre-commit
client/: bun.lockb  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/components/: EmojiGrid.tsx  Footer.tsx  Header.tsx  LanguageTabs.tsx
code_reviews/: 001.md
docs/: adversarial-code-review-2026-06-13.md  backfill-runbook.md  backfill-stats-2026-06-13.md  backfill-v2-8plus1-launch-runbook.md  backfill-v2-design.md  backfill-v2-final-review-packet.md  backfill-v2-observability.md  backfill-v2-scale-smoke-seed.md  huggingface-dataset-card.md  huggingface-upload.md  launch-log-2026-06-12.md  local-rehearsal-secrets.md  retro.md  rust-backfill-architecture-plan.md  rust-backfill-review-bundle.md  rust-rewrite-architecture-review.md  rust-rewrite-review-open-items.md  rust-rewrite-review-round2.md  rust-rewrite-review-round3.md  rust-rewrite-review-round5.md  state-report-2026-06-13.md
docs/adr/: 0001-raw-archive-and-public-corpus-boundary.md  0002-v2-serving-projection-no-delete.md
docs/agents/: domain.md  issue-tracker.md
docs/issues/: dashboard-live-stats-scan.md
rust/: .gitignore  Cargo.toml  NOTES.md  check.sh  clippy.toml  deny.toml  rustfmt.toml
rust/crates/emoji-normalizer/: Cargo.toml  README.md
rust/crates/emoji-normalizer/src/: lib.rs
rust/crates/emoji-normalizer/tests/: parity.rs
rust/crates/emoji-normalizer/tests/data/: emoji_parity_golden.tsv  generate_golden.ts
rust/crates/emojistats-backfill/: Cargo.toml  README.md
rust/crates/emojistats-backfill/src/: app.rs  archive.rs  canary.rs  canary_cmd.rs  census.rs  clickhouse.rs  commit.rs  derive.rs  derive_manifest_cmd.rs  failure.rs  fleet.rs  hash.rs  ledger.rs  lib.rs  list_records.rs  main.rs  manifest_derive.rs  metrics.rs  parse.rs  post_decode.rs  profile_cmd.rs  raw_partial_post.rs  scheduler.rs  storage_box.rs  transport.rs
rust/crates/emojistats-backfill/src/app/: census_cmd.rs  clickhouse_cmd.rs  counts.rs  fetch_one_cmd.rs  fleet_cmd.rs  metrics.rs  storage.rs
rust/crates/emojistats-backfill/src/archive/: commit_backend.rs  full_write.rs  hash.rs  io.rs  json.rs  naming.rs  parquet.rs  projection.rs  projection_writer.rs  row.rs  tests.rs  write.rs
rust/crates/emojistats-backfill/src/canary/: tests.rs
rust/crates/emojistats-backfill/src/canary_cmd/: tests.rs
rust/crates/emojistats-backfill/src/census/: db.rs  pds.rs  plc.rs  types.rs
rust/crates/emojistats-backfill/src/cli/: mod.rs
rust/crates/emojistats-backfill/src/clickhouse/: execute.rs  schema.rs  tests.rs
rust/crates/emojistats-backfill/src/commit/: manifest.rs  tests.rs
rust/crates/emojistats-backfill/src/derive/: tokens.rs
rust/crates/emojistats-backfill/src/derive_manifest_cmd/: ledger.rs  streaming.rs  tests.rs  tokens.rs
rust/crates/emojistats-backfill/src/fleet/: host_limiter.rs  ledger_async.rs  ledger_io.rs
rust/crates/emojistats-backfill/src/ledger/: codec.rs  store.rs  tests.rs
rust/crates/emojistats-backfill/src/list_records/: tests.rs
rust/crates/emojistats-backfill/src/main/: archive_host.rs  attempt_resources.rs  attempt_runtime.rs  fetch_attempt.rs  host_rate_limit.rs  list_records_attempt.rs  mod.rs  parse_archive_attempt.rs  processed_repo.rs  repo_fetch.rs  tests.rs
rust/crates/emojistats-backfill/src/manifest_derive/: tests.rs
rust/crates/emojistats-backfill/src/metrics/: tests.rs
rust/crates/emojistats-backfill/src/parse/: car.rs  mst.rs  record.rs
rust/crates/emojistats-backfill/src/storage_box/: paths.rs  process.rs  rclone.rs  source.rs  ssh.rs  tests.rs
rust/crates/emojistats-backfill/src/transport/: error.rs  rate_limit.rs  spool.rs  tests.rs
rust/crates/emojistats-backfill/tests/: archive_profile_sidecar.rs  fixtures.rs  parser_archive_fixtures.rs
rust/fixtures/: scale-smoke.dids
scripts/: upload_hf_archive.py
src/: index.ts
src/lua/: incrementEmojis.lua
