[package]
name = "emojistats-backfill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "emojistats v2 backfill: fetch a Bluesky repo, prove snapshot completeness, archive posts, derive emoji rows."
readme = "README.md"
keywords = ["bluesky", "atproto", "backfill", "emoji"]
categories = ["command-line-utilities"]

[[bin]]
name = "emojistats-backfill"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
arrow-array = "57"
arrow-schema = "57"
emojis = "0.7"
parquet = { version = "57", default-features = false, features = ["arrow", "snap", "zstd"] }
unicode-segmentation = "1"
jacquard-common = { version = "0.12.0", git = "https://github.com/aliceisjustplaying/jacquard", rev = "39648622522fa62c4c0b12ac22b8a5f6893c845a", default-features = false, features = ["std", "service-auth", "crypto", "reqwest-client", "streaming"] }
jacquard-api = { version = "0.12.0", git = "https://github.com/aliceisjustplaying/jacquard", rev = "39648622522fa62c4c0b12ac22b8a5f6893c845a", features = ["app_bsky"] }
jacquard-identity = { version = "0.12.0", git = "https://github.com/aliceisjustplaying/jacquard", rev = "39648622522fa62c4c0b12ac22b8a5f6893c845a" }
jacquard-repo = { version = "0.12.0", git = "https://github.com/aliceisjustplaying/jacquard", rev = "39648622522fa62c4c0b12ac22b8a5f6893c845a" }
futures-util = "0.3"
http = "1"
bytes = "1"
cid = { version = "0.11", features = ["serde"] }
serde_ipld_dagcbor = "0.6"
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2"

[lints]
workspace = true
